# Vulkan-Forward-Plus-Renderer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  third_party_licenses.txt
content/: depth_vert.spv  forwardplus_frag.spv  forwardplus_vert.spv  helloworld_frag.spv  helloworld_vert.spv  light_culling.comp.spv  light_culling_comp.spv
content/sponza_full/: sponza.mtl
documents/Slide Linkes/: Milestone1.txt
documents/data/: test_data.xlsx
slides/Slide Linkes/: Milestone2.txt
src/: Scene.cpp  Scene.h  ShowBase.cpp  ShowBase.h  Showbase.cpp  Showbase.h  StaticModel.cpp  StaticModel.h  VDeleter.h  VulkanShowBase.cpp  VulkanShowBase.h  Vulkan_Project.vcxproj  Vulkan_Project.vcxproj.filters  main.cpp  scene.cpp  scene.h  third_party.cpp  util.cpp  util.h
src/build_tools/: CompileShaders.bat
src/content/: helloworld_vert.spv
src/renderer/: VDeleter.h  VulkanContext.cpp  VulkanContext.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanShowBase.cpp  VulkanShowBase.h  context.cpp  context.h  model.cpp  model.h  raii.h  vulkan_util.cpp  vulkan_util.h
src/shaders/: CompileShaders.bat  depth.vert  forwardplus.frag  forwardplus.vert  helloworld.frag  helloworld.vert  light_culling.comp.glsl
src/x64/Debug/: vc140.idb
src/x64/Debug/Vulkan_Project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Vulkan_Project.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/x64/Release/Vulkan_Project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Vulkan_Project.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
